--- a/app/src/main/resources/templates/solicitacao/cadastro.html
+++ b/app/src/main/resources/templates/solicitacao/cadastro.html
@@ -172,7 +172,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="columns column">
                     <div class="column">
                         <span>Cidade:</span>
@@ -191,9 +190,6 @@
                         </div>
                     </div>
                 </div>
-
-
-
                 <div class="column">
                     <h4 class="title is-4">Dados do Acompanhante</h4>
                     <h5 class="subtitle is-6 campo-obrigatorio">(Os campos do acompanhante 1 são obrigatórios)</h5>
@@ -234,13 +230,11 @@
                         </div>
                     </div>
                 </div>
-
-
-
                 <div class="column">
                     <div class="field">
                         <div class="control">
-                            <button class="button verde-viavida borda-arredondada" value="Enviar Solicitação" type="submit"><span>Enviar solicitação</span>
+                            <button class="button verde-viavida borda-arredondada" value="Enviar Solicitação" type="submit">
+                                <span>Enviar solicitação</span>
                                 <span class="icon is-small">
                                     <i class="fas fa-angle-right"></i>
                                 </span>
@@ -252,11 +246,11 @@
                                 </span>
                             </button>
 
-                            <a class="button is-danger borda-arredondada" type="button" href="/">
-                            <span>Cancelar</span>
-                            <span class="icon is-small">
-                                <i class="fas fa-times"></i>
-                            </span>
+                            <a class="button is-danger borda-arredondada" type="button" th:href="@{/solicitacao/hospital/lista}">
+                                <span>Cancelar</span>
+                                <span class="icon is-small">
+                                    <i class="fas fa-times"></i>
+                                </span>
                             </a>
                         </div>
                     </div>
