--- a/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoHospital.html
+++ b/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoHospital.html
@@ -22,37 +22,83 @@
                             <input type="submit" class="button verde-viavida borda-arredondada" value="Solicitar Vaga" />
                         </div>
                     </form>
-                    <div class="is-mobile is-centered">
-                        <div class="is-mobile is-centered">
-                        </div>
-                        <table class="table centralizar">
-                            <tr>
-                                <th>Nome </th>
-                                <th>Última atualização</th>
-                                <th>Status</th>
-                                <th>Editar</th>
-                                <th>Excluir</th>
-                            </tr>
+                    <!--<div class="is-mobile is-centered">-->
+                        <!--<div class="is-mobile is-centered">-->
+                        <!--</div>-->
+                        <!--<table class="table centralizar">-->
+                            <!--<tr>-->
+                                <!--<th>Nome </th>-->
+                                <!--<th>Última atualização</th>-->
+                                <!--<th>Status</th>-->
+                                <!--<th>Editar</th>-->
+                                <!--<th>Excluir</th>-->
+                            <!--</tr>-->
 
-                            <tr th:each="solicitacao : ${solicitacoesHospital}">
-                                <td class="has-text-centered" th:text="${solicitacao.nome}"></td>
-                                <td class="has-text-centered" th:text="${solicitacao.formataData()}"></td>
-                                <td class="has-text-centered" th:text="${solicitacao.status}"></td>
-                                <td class="column has-text-centered">
-                                    <a th:href="@{/solicitacao/{id}/editar(id=${solicitacao.id})}">
-                                        <button class="button" type="submit" th:if="${solicitacao.status}!='Aceito'">
-                                            <i class="fas fa-edit"></i>
-                                        </button>
-                                    </a>
-                                </td>
-                                <td>
-                                    <a th:href="@{/solicitacao/{id}/excluir(id=${solicitacao.id})}">
-                                        <button class="button is-danger" type="submit" th:if="${solicitacao.status}!='Aceito'" onclick="return confirm('Tem certeza que deseja excluir?');">Excluir</button>
-                                    </a>
-                               </td>
-                            </tr>
-                        </table>
+
+                                <!--<td class="has-text-centered" th:text="${solicitacao.nome}"></td>-->
+                                <!--<td class="has-text-centered" th:text="${solicitacao.formataData()}"></td>-->
+                                <!--<td class="has-text-centered" th:text="${solicitacao.status}"></td>-->
+                                <!--<td class="column has-text-centered">-->
+                                    <!--<a th:href="@{/solicitacao/{id}/editar(id=${solicitacao.id})}">-->
+                                        <!--<button class="button" type="submit" th:if="${solicitacao.status}!='Aceito'">-->
+                                            <!--<i class="fas fa-edit"></i>-->
+                                        <!--</button>-->
+                                    <!--</a>-->
+                                <!--</td>-->
+                                <!--<td>-->
+                                    <!--<a th:href="@{/solicitacao/{id}/excluir(id=${solicitacao.id})}">-->
+                                        <!--<button class="button is-danger" type="submit" th:if="${solicitacao.status}!='Aceito'" onclick="return confirm('Tem certeza que deseja excluir?');">Excluir</button>-->
+                                    <!--</a>-->
+                               <!--</td>-->
+                            <!--</tr>-->
+                        <!--</table>-->
+                    <!--</div>-->
+
+
+                    <div class="container">
+                        <div class="section">
+                            <div class="columns is-multiline is-lefty">
+                                <tr th:each="solicitacao : ${solicitacoesHospital}">
+                                    <div class="column">
+                                        <div class="box">
+                                            <strong><span>Nome:</span></strong>
+                                            <span th:text="${solicitacao.nome} + ' - '"></span>
+                                            <strong><span>Status:</span></strong>
+                                            <span th:text="${solicitacao.status}"></span>
+                                            <hr>
+                                            <strong><span>Data de atualização:</span></strong>
+                                            <span th:text="${solicitacao.formataData()}"></span>
+                                            <hr>
+                                            <div class="field has-addons">
+                                                <div class="control">
+                                                    <a th:href="@{/solicitacao/{id}/editar(id=${solicitacao.id})}">
+                                                        <button class="button" type="submit" th:if="${solicitacao.status}!='Aceito'">
+                                                            <span>Editar</span>
+                                                            <span class="icon is-small"><i class="fas fa-edit"></i></span>
+                                                        </button>
+                                                    </a>
+                                                </div>
+                                                <div class="control">
+                                                    <a th:href="@{/solicitacao/{id}/excluir(id=${solicitacao.id})}">
+                                                        <button class="button is-danger" type="submit" th:if="${solicitacao.status}!='Aceito'" onclick="return confirm('Tem certeza que deseja excluir?');">
+                                                            <span>Excluir</span>
+                                                            <span class="icon is-small">
+                                                                <i class="fas fa-trash-alt"></i>
+                                                            </span>
+                                                        </button>
+                                                    </a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
+                </div>
+
+
+
                 </div>
             </div>
         </div>
