<@ingridDuarte> Atualiza botão 'Exportar Solicitação para EXCEL'

--- a/app/src/main/resources/templates/bemvindo/bemvindo.html
+++ b/app/src/main/resources/templates/bemvindo/bemvindo.html
@@ -30,6 +30,11 @@
                                 <div class="board-item">
                                     <div class="board-item-content"><a href="/registrar">Registrar usuários</a></div>
                                 </div>
+                                <div class="board-item">
+                                    <div class="board-item-content">
+                                        <a th:href="@{/solicitacao/negadas/csv}">Exportar Solicitação para EXCEL</a>
+                                    </div>
+                                </div>
                             </div>
                         </article>
                     </div>
