--- a/app/src/main/resources/templates/layout.html
+++ b/app/src/main/resources/templates/layout.html
@@ -21,6 +21,7 @@
     <script src="/js/validaCadastroSolicitacao.js"></script>
     <script src="/js/validaIdade.js"></script>
     <script src="/js/validacaoRegistrar.js"></script>
+    <script src="/js/validaDataCheckinCheckout.js"></script>
 </head>
 
 <body>
