<@rfelipe, @matheus-malta> Validações com javascript
Co-authored-by: rfelipe <f.questao@gmail.com>

--- a/app/src/main/resources/templates/solicitacao/cadastro.html
+++ b/app/src/main/resources/templates/solicitacao/cadastro.html
@@ -237,12 +237,13 @@
 
                 <div class="column">
                     <h4 class="title is-4">Dados do Solicitante</h4>
+                    <h5 class="subtitle is-6 campo-obrigatorio">Os campos com * são obrigatórios</h5>
                 </div>
 
                 <div class="column">
                     <div class="field">
                         <div class="control">
-                            <span>Nome do Solicitante:</span>
+                            <span>*Nome do Solicitante:</span>
                             <input class="input input-fancy borda-arredondada" th:field="*{nomeSolicitante}" type="text" id="nomeSolicitante" >
                         </div>
                     </div>
@@ -251,7 +252,7 @@
                 <div class="column">
                     <div class="field">
                         <div class="control">
-                            <span>Hospital de Referência do Solicitante:</span>
+                            <span>*Hospital de Referência do Solicitante:</span>
                             <input class="input input-fancy borda-arredondada" th:field="*{hospitalReferencia}" type="text" id="hospitalReferencia" >
                         </div>
                     </div>
@@ -260,7 +261,7 @@
                 <div class="column">
                     <div class="field">
                         <div class="control">
-                            <span>E-mail do Solicitante:</span>
+                            <span>*E-mail do Solicitante:</span>
                             <input class="input input-fancy borda-arredondada" th:field="*{email}" type="text" id="email" >
                         </div>
                     </div>
@@ -269,7 +270,7 @@
                 <div class="column">
                     <div class="field">
                         <div class="control">
-                            <span>Telefone do Solicitante:</span>
+                            <span>*Telefone do Solicitante:</span>
                             <input class="input input-fancy borda-arredondada" th:field="*{telefoneSolicitante}" type="text" id="telefoneSolicitante" >
                         </div>
                     </div>
