--- a/app/src/main/resources/templates/solicitacao/cadastro.html
+++ b/app/src/main/resources/templates/solicitacao/cadastro.html
@@ -240,10 +240,11 @@
                     <h5 class="subtitle is-6 campo-obrigatorio">Os campos com * são obrigatórios</h5>
                 </div>
 
-                <div class="column">
+                <div class="column" style="display:none">
                     <div class="field">
                         <div class="control">
                             <span>*Nome do Solicitante:</span>
+                            <span id="logado" sec:authentication="name"></span>
                             <input class="input input-fancy borda-arredondada" th:field="*{nomeSolicitante}" type="text" id="nomeSolicitante" >
                         </div>
                     </div>
@@ -307,3 +308,7 @@
 </main>
 </body>
 </html>
+<script>
+    var logado = document.getElementById("logado");
+    document.getElementById("nomeSolicitante").value=logado.innerText;
+</script>
