--- a/app/src/main/resources/templates/solicitacao/cadastro.html
+++ b/app/src/main/resources/templates/solicitacao/cadastro.html
@@ -234,13 +234,11 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="column">
                     <h4 class="title is-4">Dados do Solicitante</h4>
                     <h5 class="subtitle is-6 campo-obrigatorio">Os campos com * são obrigatórios</h5>
                 </div>
-
-                <div class="column" style="display:none">
+                <div class="column div-oculta">
                     <div class="field">
                         <div class="control">
                             <span>*Nome do Solicitante:</span>
@@ -249,7 +247,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="column">
                     <div class="field">
                         <div class="control">
@@ -258,7 +255,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="column">
                     <div class="field">
                         <div class="control">
@@ -267,7 +263,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="column">
                     <div class="field">
                         <div class="control">
@@ -276,7 +271,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="column">
                     <div class="field">
                         <div class="control">
