<@brendamoniqueb, @ingridDuarte> exporta dados do acompanhante para o excel

--- a/app/src/main/resources/templates/bemvindo/bemvindo.html
+++ b/app/src/main/resources/templates/bemvindo/bemvindo.html
@@ -32,7 +32,7 @@
                                 </div>
                                 <div class="board-item">
                                     <div class="board-item-content">
-                                        <a th:href="@{/solicitacao/negadas/csv}">Exportar Solicitação para EXCEL</a>
+                                        <a th:href="@{/solicitacao/csv}">Exportar dados da Solicitação para EXCEL</a>
                                     </div>
                                 </div>
                             </div>
@@ -51,7 +51,6 @@
         </div>
     </div>
 </main>
-
 <script>
     (function () {
         let burger = document.querySelector('.burger');
