--- a/app/src/main/resources/templates/quarto/quarto.html
+++ b/app/src/main/resources/templates/quarto/quarto.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html th:replace="~{layout :: layout(~{::title}, ~{::main})}" xmlns:th="http://www.thymeleaf.org">
+<html th:replace="~{layout :: layout(~{::title}, ~{::main})}" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
     <title>Hospebem - Quartos</title>
 </head>
 
 <body>
-<main>
+<main sec:authorize="hasAuthority(T(com.thoughtworks.aceleradora.login.dominio.Cargo).ADMINISTRADOR.getNome())">
     <div th:include="@{./partes/cabecalhoDadosSolicitante}"/>
 
     <div class="column has-text-centered">
