--- a/app/src/main/resources/templates/quarto/quarto.html
+++ b/app/src/main/resources/templates/quarto/quarto.html
@@ -5,7 +5,9 @@
 </head>
 
 <body>
-<main sec:authorize="hasAuthority(T(com.thoughtworks.aceleradora.login.dominio.Cargo).ADMINISTRADOR.getNome())">
+<main>
+    <div  sec:authorize="hasAuthority(T(com.thoughtworks.aceleradora.login.dominio.Cargo).ASSISTENTE_SOCIAL.getNome())"> Você não tem autorização para acessar essa página</div>
+    <div sec:authorize="hasAuthority(T(com.thoughtworks.aceleradora.login.dominio.Cargo).ADMINISTRADOR.getNome())">
     <div th:include="@{./partes/cabecalhoDadosSolicitante}"/>
 
     <div class="column has-text-centered">
